[tool.poetry]
name = "datcord_bot"
version = "1.0.0"
description = "Weirdly specific Discord bot with role assigning and lots of memery (used on the Godot Discord server)"
license = "MIT"
repository = "https://github.com/Calinou/datcord_bot"
homepage = "https://godotengine.org/community"
readme = "README.md"

authors = [
    "Calinou",
    "NiclasEriksen",
    "karroffel",
]

keywords = [
    "discord",
    "discord-bot",
]

[tool.poetry.dependencies]
# Python 3.7 and later aren't working due to discord.py < 1.0.0 being used
# See <https://github.com/Rapptz/discord.py/issues/1396>
python = "^3.5, < 3.7"
"discord.py" = "^0.16"
typing_extensions = "^3.7"
